# credit

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  creddefs.h  editor.c  editor.h  input.c  input.h  main.c  terminal.c  terminal.h  util.c  util.h
src/util/: common.c  common.h  strbuf.c  strbuf.h  xalloc.c  xalloc.h
